tests/ui/compile-fail/pinned_drop/unexpected_item.stderr
error: no rules expected keyword `const`
 --> tests/ui/compile-fail/pinned_drop/unexpected_item.rs:8:5
  |
8 |     const BAZ: usize = 0;
  |     ^^^^^ no rules expected this token in macro call
  |
note: while trying to match keyword `fn`
 --> src/macros.rs
  |
  |             fn drop($($sig:tt)*) {
  |             ^^
